Now data being stored in the database
